# rulecraft

./: .env.example  .gitignore  Cargo.toml  HANDOFF.md  Implementation Plan3.1  Progress Report3.1  README.md  Task3.1
agent/: AGENT.md
agent/context/: constraints.md  glossary.md
data/rules/: abilities.yaml  combat.yaml  conditions.yaml  equipment.yaml  exploration.yaml  resting.yaml  skills.yaml  spellcasting.yaml  spells.yaml
docker/: Caddyfile  Dockerfile  docker-compose.prod.yml  docker-compose.yml
docs/: rag_documentation.md  search-functionality-walkthrough.html
docs/adr/: 0001-initial-architecture.md
docs/deployment/: DEPLOYMENT_STATUS.md  DEPLOY_DAY_RUNBOOK.md  VPS_SETUP.md
docs/design/: overview.md  project-spec.md
docs/features/: grimoire-theme.md
mcp/config/: mcp.config.example.json
migrations/: 001_initial.sql
mockups/: 01-ancient-grimoire.html  02-cyberpunk-terminal.html  03-minimalist-modern.html  04-war-room.html  05-illustrated-storybook.html  06-grimoire-refined.html  07-neo-arcane.html  08-elven-glass.html  09-dwarven-forge.html  10-astral-plane.html  11-gothic-shadow.html  index.html
scripts/: check_db.rs  generate_equipment.py  generate_spells.py  test_db.py  vps-setup.sh
src/: config.rs  lib.rs  main.rs
src/ai/: claude.rs
src/db/: sqlite.rs
src/middleware/: mod.rs  rate_limit.rs
src/models/: rule.rs
src/routes/: admin.rs  mod.rs  rules.rs  scenario.rs  search.rs
src/search/: fulltext.rs  hybrid.rs  indexer.rs  mod.rs  openai_embeddings.rs  qdrant.rs  vector.rs
static/css/: styles.css
static/js/: bookmarks.js  search.js
templates/: base.html  index.html
templates/admin/: dashboard.html  form.html  login.html  not_configured.html
templates/partials/: bookmark_btn.html  rule_card.html
templates/rules/: detail.html  list.html  search.html
templates/scenario/: ask.html  error.html  response.html
tests/integration/: rules_test.rs
