[package]
name = "rulecraft"
version = "0.1.0"
edition = "2021"
description = "D&D 2024 rules lookup and AI-powered scenario ruling assistant"
authors = ["rulecraft"]

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1", features = ["full"] }

# Templating
askama = "0.12"
askama_axum = "0.4"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP utilities
tower-http = { version = "0.5", features = ["fs", "cors"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Configuration
dotenvy = "0.15"

# HTTP client (for Claude API)
reqwest = { version = "0.11", features = ["json"] }

# Error handling
thiserror = "1"

# UUID for rule IDs
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tokio-test = "0.4"
